# chatbot-food-ordering

./: .gitignore  README.md
backend/: helpers.py  main.py  pyproject.toml
backend/prisma/: schema.prisma
dialog-flow/: index.html  training_phrases.txt
website/: index.html
website/css/: style.css
website/js/: config.js  script.js
